@@ -1,3 +1,7 @@
+Thu Dec  5 21:59:08 1996  Tom Yu  <tlyu@mit.edu>
+
+	* kinit.M: v5srvtab -> krb5.keytab [279]
+
 Wed Nov  6 09:31:35 1996  Theodore Y. Ts'o  <tytso@mit.edu>
 
 	* kinit.c (main): Check the return code from krb5_init_context,
