@@ -1,3 +1,7 @@
+Thu Dec  5 21:58:28 1996  Tom Yu  <tlyu@mit.edu>
+
+	* login.M: v5srvtab -> krb5.keytab [279]
+
 Sun Nov 24 23:35:22 1996  Ezra Peisach  <epeisach@mit.edu>
 
 	* login.c (try_afscall): Change to take pointer to function
